--- a/ISLT_4355/nav.css
+++ b/ISLT_4355/nav.css
@@ -1,4 +1,4 @@
-ul {
+/*ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -23,7 +23,7 @@ ul {
     background-color: #111;
   }
 
-  .dropbtn {
+ /* .dropbtn {
     color: white;
     padding: 0px;
     font-size: 16px;
@@ -47,6 +47,93 @@ ul {
     text-decoration: none;
     display: block;
   }
+  
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
+  
+  li a, .dropbtn {
+    display: inline-block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+  
+  li a:hover, .dropdown:hover .dropbtn {
+    background-color: #3EB489;
+  }
+  
+  li.dropdown {
+    display: inline-block;
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+  }
+    
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
+  */
+
+  ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    border: 0;
+    overflow: hidden;
+    background-color: #333;
+  }
+  
+  li {
+    float: left;
+  }
+  
+  li a, .dropbtn {
+    display: inline-block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+  
+  li a:hover, .dropdown:hover .dropbtn {
+    background-color: #3EB489;
+  }
+  
+  li.dropdown {
+    display: inline-block;
+}
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  .dropdown-content a {
+    color: white;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+  }
+  
+  .dropdown-content a:hover {background-color: #3EB489;}
   
   .dropdown:hover .dropdown-content {
     display: block;
