--- a/ISLT_4355/style.css
+++ b/ISLT_4355/style.css
@@ -1,7 +1,21 @@
 body {
     background-color: #696969;
+    color: white;
 }
 
 h1 {
     color: #3EB489;
 }
+
+.ResumeLink a:link, a:visited {
+    background-color: #333;
+    text-decoration: none;
+    padding: 12px 20px;
+    text-align: center;
+    display: inline-block;
+    color: white;
+}
+
+.ResumeLink a:hover, a:active {
+    background-color: #3EB489;
+  }
