--- a/ISLT_4355/style.css
+++ b/ISLT_4355/style.css
@@ -38,3 +38,52 @@ h1 {
     padding: 0px;
     margin: 10px;
 }
+
+* {
+    box-sizing: border-box;
+  }
+  
+    .bigimg {
+    text-align: center;
+    border: 4px white;
+    border-width: 4px;
+  }
+
+  #column {
+    width: auto;
+    height: auto;
+    max-height: 70vh;
+    max-width: 85vw;
+    margin-top: 10px;
+    border: darkslategrey solid 3px;
+    border-radius: 8px;
+  }
+
+  .row {  
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .side {
+    flex: 30%;
+    padding: 20px;
+  }
+  
+  .main {
+    flex: 70%;
+    padding: 20px;
+  }
+  
+  .image {
+    width: 380px;
+    height: 380px;
+    justify-content: right;
+    border: darkslategrey solid 3px;
+    border-radius: 8px;
+}
+
+  @media screen and (max-width: 700px) {
+    .row, .navbar {   
+      flex-direction: column;
+    }
+  }
