--- a/ISLT_4355/style.css
+++ b/ISLT_4355/style.css
@@ -25,7 +25,6 @@ h1 {
 }
 
 .reflection {
-    text-indent: 30px;
     width: auto;
     border: 0px;
     padding: 0px;
@@ -42,6 +41,10 @@ h1 {
     padding: 0px;
     margin: 10px;
 }
+
+/*
+Start of Grid Styling
+*/
 
 .bigimg {
     text-align: center;
@@ -60,8 +63,65 @@ h1 {
 }
 
 .row {  
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: 30% 70%;
+    grid-template-rows: 15% 15% 60% 10%;
+    gap: 0px 0px;
+    grid-auto-flow: row;
+    grid-template-areas:
+      "Header Header"
+      "Navigation Navigation"
+      "Image Content"
+      "Footer Footer";
+}
+
+.rowindex {
+    grid-area: Content;
+}
+
+.indexcontainer > div {
+    text-align: center;
+    font-size: 20px;
+    border: darkslategrey solid 3px;
+    border-radius: 8px;
+    background-color: #333;
+}
+
+.indexcontainer {
+    display: grid;
+    grid-template-areas: 
+    "Header Header Header Header"
+    "Content Content Content Content";
+    grid-gap: 0px;
+}
+
+.reflectioncontainer{
+    margin: 20px auto;
+    width: 50%;
+    height: 50%;
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-row: auto auto;
+    grid-column-gap: 20px;
+    grid-row-gap: 20px;
+    align-content: center;
+}
+
+.box{
+    background-color: #333;
+    padding: 20px;
+    border-radius: 8px;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    font-size: 18px;
+    font-family:sans-serif;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+}
+
+.box:hover{
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
 
 .side {
@@ -72,6 +132,7 @@ h1 {
 .main {
     flex: 70%;
     padding: 20px;
+    justify-content: center;
 }
   
 .image {
@@ -82,8 +143,30 @@ h1 {
     border-radius: 8px;
 }
 
+.logo {
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 @media screen and (max-width: 700px) {
     .row, .navbar {   
       flex-direction: column;
     }
+  }
+
+.grid-container-project {
+    display: grid;
+    grid-template-columns: auto auto;
+    background-color: #333;
+    padding: 10px;
+  }
+.grid-item-project {
+    border: 1px solid black;
+    padding: 20px;
+    text-align: center;
+    font-size: 30px;
   }
