--- a/ISLT_4355/style.css
+++ b/ISLT_4355/style.css
@@ -11,6 +11,25 @@ h1 {
     color: #3EB489;
 }
 
+footer {
+    text-align: center;
+    display: block;
+}
+
+.favicon {
+    height: auto;
+    width: 20px;
+}
+
+.footercontainer {
+    background-image: url('footerbgg.jpeg');
+    margin-left: 30%;
+    margin-right: 30%;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border-radius: 8px;
+}
+
 .ResumeLink a:link, a:visited {
     background-color: #333;
     text-decoration: none;
