--- a/ISLT_4355/style.css
+++ b/ISLT_4355/style.css
@@ -19,6 +19,13 @@ footer {
 .favicon {
     height: auto;
     width: 20px;
+    transition: transform .8s;
+}
+
+.favicon:hover {
+    -ms-transform: scale(1.5); /* IE 9 */
+    -webkit-transform: scale(1.5); /* Safari 3-8 */
+    transform: scale(1.5); 
 }
 
 .footercontainer {
