--- a/ISLT_4355/style.css
+++ b/ISLT_4355/style.css
@@ -2,10 +2,10 @@
     box-sizing: border-box;
   }
 
-body {
+/*body {
     background-color: #696969;
     color: white;
-}
+}*/
 
 h1 {
     color: #3EB489;
@@ -14,6 +14,32 @@ h1 {
 footer {
     text-align: center;
     display: block;
+}
+
+body, html {
+    height: 100%;
+    margin: 0;
+    color: white;
+  }
+  
+  .parallax {
+    /* The image used */
+    background-image: url('pokemonbg.jpeg');
+  
+    /* Full height */
+    height: 100%; 
+  
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+
+@media only screen and (max-device-width: 1366px) {
+    .parallax {
+      background-attachment: scroll;
+    }
 }
 
 .favicon {
@@ -35,6 +61,7 @@ footer {
     padding-top: 10px;
     padding-bottom: 10px;
     border-radius: 8px;
+    margin-top: 20px;
 }
 
 .ResumeLink a:link, a:visited {
@@ -86,6 +113,7 @@ Start of Grid Styling
     margin-top: 10px;
     border: darkslategrey solid 3px;
     border-radius: 8px;
+    background-color: #333;
 }
 
 .row {  
@@ -167,6 +195,7 @@ Start of Grid Styling
     justify-content: right;
     border: darkslategrey solid 3px;
     border-radius: 8px;
+    margin-top: 85px;
 }
 
 .logo {
@@ -185,14 +214,35 @@ Start of Grid Styling
   }
 
 .grid-container-project {
+    margin: 20px auto;
+    width: 50%;
+    height: 50%;
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-row: auto auto;
+    align-content: center;
+    background-color: #333;
+    /*
     display: grid;
     grid-template-columns: auto auto;
     background-color: #333;
-    padding: 10px;
+    padding: 60px; */
   }
 .grid-item-project {
     border: 1px solid black;
-    padding: 20px;
+    padding: 10px;
     text-align: center;
+    justify-content: center;
     font-size: 30px;
   }
+
+.headercontainer {
+    background-color: #3EB489;
+    margin-left: 30%;
+    margin-right: 30%;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border-radius: 8px;
+    text-align: center;
+    margin-top: 20px;
+}
