--- a/ISLT_4355/style.css
+++ b/ISLT_4355/style.css
@@ -216,7 +216,9 @@ Start of Grid Styling
   }
 
 .grid-container-project {
-    margin: 20px auto;
+    margin-left: 25%;
+    margin-right: 25%;
+    margin-top: 5%;
     width: 50%;
     height: 50%;
     display: grid;
@@ -232,10 +234,11 @@ Start of Grid Styling
   }
 .grid-item-project {
     border: 1px solid black;
-    padding: 10px;
+    padding: 10%;
     text-align: center;
     justify-content: center;
     font-size: 30px;
+    font-size: 2vw;
   }
 
 .headercontainer {
