--- a/ISLT_4355/style.css
+++ b/ISLT_4355/style.css
@@ -152,25 +152,26 @@ Start of Grid Styling
 }
 
 .reflectioncontainer{
-    margin: 20px auto;
-    width: 50%;
-    height: 50%;
+    margin: 10%;
+    width: 75%;
+    height: auto;
     display: grid;
     grid-template-columns: auto auto;
     grid-row: auto auto;
-    grid-column-gap: 20px;
-    grid-row-gap: 20px;
+    grid-column-gap: 10%;
+    grid-row-gap: 10%;
     align-content: center;
+    text-align: center;
 }
 
 .box{
     background-color: #333;
-    padding: 20px;
+    padding: 10%;
     border-radius: 8px;
     display:flex;
     align-items:center;
     justify-content:center;
-    font-size: 18px;
+    font-size: 1.5vw;
     font-family:sans-serif;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
