--- a/ISLT_4355/style.css
+++ b/ISLT_4355/style.css
@@ -16,6 +16,10 @@ footer {
     display: block;
 }
 
+html {
+    height: 100vh;
+}
+
 body, html {
     height: 100%;
     margin: 0;
@@ -26,7 +30,7 @@ body, html {
     /* The image used */
     background-image: url('pokemonbg.jpeg');
     background-repeat: repeat-y;
-    background-size: cover;
+    background-size: 100% 100%;
   
     /* Full height */
     height: 100%; 
