--- a/ISLT_4355/style.css
+++ b/ISLT_4355/style.css
@@ -42,7 +42,7 @@ body, html {
     background-size: cover;
   }
 
-@media only screen and (max-device-width: 1366px) {
+@media only screen and (max-width: 1366px) {
     .parallax {
       background-attachment: scroll;
     }
@@ -70,10 +70,17 @@ body, html {
     margin-top: 20px;
 }
 
+iframe {
+    width: 80%;
+    height: 200%;
+    border: 0;
+}
+
 .ResumeLink a:link, a:visited {
     background-color: #333;
     text-decoration: none;
-    padding: 12px 20px;
+    padding: 2.5%;
+    margin-bottom: 12%;
     text-align: center;
     display: inline-block;
     color: white;
@@ -162,7 +169,6 @@ Start of Grid Styling
     height: auto;
     display: grid;
     grid-template-columns: auto auto;
-    grid-row: auto auto;
     grid-column-gap: 10%;
     grid-row-gap: 10%;
     align-content: center;
@@ -229,7 +235,6 @@ Start of Grid Styling
     height: 50%;
     display: grid;
     grid-template-columns: auto auto;
-    grid-row: auto auto;
     align-content: center;
     background-color: #333;
     /*
