--- a/ISLT_4355/style.css
+++ b/ISLT_4355/style.css
@@ -62,12 +62,13 @@ body, html {
 
 .footercontainer {
     background-image: url('footerbgg.jpeg');
-    margin-left: 30%;
-    margin-right: 30%;
+    width: 30%;
     padding-top: 10px;
     padding-bottom: 10px;
     border-radius: 8px;
     margin-top: 20px;
+    overflow: auto;
+    display: inline-block;
 }
 
 iframe {
