--- a/ISLT_4355/style.css
+++ b/ISLT_4355/style.css
@@ -62,11 +62,9 @@ body, html {
 
 .footercontainer {
     background-image: url('footerbgg.jpeg');
-    width: 30%;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    width: 20vw;
+    height: auto;
     border-radius: 8px;
-    margin-top: 20px;
     overflow: auto;
     display: inline-block;
 }
