--- a/ISLT_4355/style.css
+++ b/ISLT_4355/style.css
@@ -62,11 +62,16 @@ body, html {
 
 .footercontainer {
     background-image: url('footerbgg.jpeg');
-    width: 20vw;
+    width: 30vw;
     height: auto;
     border-radius: 8px;
     overflow: auto;
-    display: inline-block;
+    display: block;
+    position: relative;
+    padding-left: 1%;
+    padding-right: 1%;
+    margin-top: 3%;
+    left: 35%;
 }
 
 iframe {
@@ -260,4 +265,44 @@ Start of Grid Styling
     border-radius: 8px;
     text-align: center;
     margin-top: 20px;
+}
+
+/* Style inputs with type="text", select elements and textareas */
+input[type=text], select, textarea {
+    width: 100%; /* Full width */
+    padding: 12px; /* Some padding */  
+    border: 1px solid #ccc; /* Gray border */
+    border-radius: 8px; /* Rounded borders */
+    box-sizing: border-box; /* Make sure that padding and width stays in place */
+    margin-top: 6px; /* Add a top margin */
+    margin-bottom: 16px; /* Bottom margin */
+    resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
+}
+  
+  /* Style the submit button with a specific background color etc */
+input[type=submit] {
+    background-color: #04AA6D;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+  
+  /* When moving the mouse over the submit button, add a darker green color */
+input[type=submit]:hover {
+    background-color: #45a049;
+}
+  
+  /* Add a background color and some padding around the form */
+.contactcontainer {
+    width: 30%;
+    left: 35%;
+    top: 0%;
+    display: block;
+    position: relative;
+    border-radius: 5px;
+    background-color: #333;
+    padding: 2%;
+    margin-top: 3%;
 }
