--- a/ISLT_4355/style.css
+++ b/ISLT_4355/style.css
@@ -267,19 +267,17 @@ Start of Grid Styling
     margin-top: 20px;
 }
 
-/* Style inputs with type="text", select elements and textareas */
 input[type=text], select, textarea {
-    width: 100%; /* Full width */
-    padding: 12px; /* Some padding */  
-    border: 1px solid #ccc; /* Gray border */
-    border-radius: 8px; /* Rounded borders */
-    box-sizing: border-box; /* Make sure that padding and width stays in place */
-    margin-top: 6px; /* Add a top margin */
-    margin-bottom: 16px; /* Bottom margin */
-    resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
+    width: 100%; 
+    padding: 12px;  
+    border: 1px solid #ccc;
+    border-radius: 8px; 
+    box-sizing: border-box; 
+    margin-top: 6px; 
+    margin-bottom: 16px;
+    resize: vertical 
 }
   
-  /* Style the submit button with a specific background color etc */
 input[type=submit] {
     background-color: #04AA6D;
     color: white;
@@ -289,12 +287,10 @@ input[type=submit] {
     cursor: pointer;
 }
   
-  /* When moving the mouse over the submit button, add a darker green color */
 input[type=submit]:hover {
     background-color: #45a049;
 }
   
-  /* Add a background color and some padding around the form */
 .contactcontainer {
     width: 30%;
     left: 35%;
