--- a/ISLT_4355/nav.css
+++ b/ISLT_4355/nav.css
@@ -58,7 +58,7 @@ a {
 .nav-logo {
   font-size: 2.1rem;
   font-weight: 500;
-  color: #482ff7;
+  color: white;
 }
 
 @media only screen and (max-width: 768px) {
